<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_xxlarge"
        android:gravity="center_vertical|start"
        android:paddingLeft="@dimen/spacing_middle"
        android:paddingRight="@dimen/spacing_middle"
        android:text="@string/buyer_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_xmedium"
        android:paddingRight="@dimen/spacing_xmedium">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/buyer_name_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:background="@drawable/edittext_design"
                android:id="@+id/buyer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:inputType="text"
                android:maxLength="50" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:background="@drawable/edittext_design"

                android:layout_margin="5dp"
                android:padding="10dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="50" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:background="@drawable/edittext_design"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:inputType="phone"
                android:maxLength="50" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/hint_address"
                android:lines="3"
                android:background="@drawable/edittext_design"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:maxLength="300"
                android:maxLines="4"
                android:minLines="3" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/payment_type_sp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/date_shipping_sp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:spinnerMode="dialog" />
         <Spinner
            android:id="@+id/time_shiping_sp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:spinnerMode="dialog" />


        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_medium"
            android:paddingRight="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:gravity="center_vertical|start"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/date_shipping"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_date_ship"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60" />

                <ImageButton
                    android:id="@+id/bt_date_shipping"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:gravity="center_vertical|start"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/time_shipping"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_date_ship"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60" />

                <ImageButton
                    android:id="@+id/bt_time_shipping"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/colorPrimary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/grey_40" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:visibility="gone"
            android:id="@+id/comment_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:background="@drawable/edittext_design"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/hint_comment"
                android:lines="3"
                android:maxLength="500"
                android:maxLines="4"
                android:minLines="3" />

        </android.support.design.widget.TextInputLayout>




    </LinearLayout>


</LinearLayout>