<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">






        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_medium">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:text="@string/cost_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_large"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Total Order"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_80" />

                    <TextView
                        android:id="@+id/total_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100.00 USD"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorPrice" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_large"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tax"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Delivery Charges"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_80" />

                    <TextView
                        android:id="@+id/delivery_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10.00 USD"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorPrice" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_large"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/discount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Discount"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_80" />

                    <TextView
                        android:id="@+id/discount_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10.00 USD"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorPrice" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2px"
                        android:layout_weight="1"
                        android:background="@color/grey_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  +"
                        android:textColor="@color/grey_20" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_mxlarge"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total_fess"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_80"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_fees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="110.00 USD"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorPrice"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_medium">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:text="@string/buyer_profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_xmedium"
                android:paddingRight="@dimen/spacing_xmedium">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/buyer_name_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:background="@drawable/edittext_design"
                        android:id="@+id/buyer_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:inputType="text"
                        android:maxLength="50" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:background="@drawable/edittext_design"

                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="50" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone"
                        android:background="@drawable/edittext_design"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:inputType="phone"
                        android:maxLength="50" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:hint="@string/hint_address"
                        android:lines="3"
                        android:background="@drawable/edittext_design"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:maxLength="300"
                        android:maxLines="4"
                        android:minLines="3" />

                </android.support.design.widget.TextInputLayout>



                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_medium"
                    android:paddingRight="@dimen/spacing_medium">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:gravity="center_vertical|start"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/spacing_medium">

                        <TextView
                            android:id="@+id/date_shipping"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/hint_date_ship"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                        <ImageButton
                            android:id="@+id/bt_date_shipping"
                            android:layout_width="@dimen/spacing_xxlarge"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:tint="@color/colorPrimary" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2px"
                        android:background="@color/grey_40" />
                </LinearLayout>


            </LinearLayout>




        </LinearLayout>



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_vertical|start"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:text="Product Order List"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_20" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/orderedPro_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:scrollbars="vertical"
                android:scrollingCache="true" />

        </LinearLayout>
    </LinearLayout>





</android.support.constraint.ConstraintLayout>